feat(geocode): add simplified version of the geocoding service from Geoplateforme
