# src/app.js
@@ -38,12 +38,15 @@ app.get('/health', function (req, res) {
 
 
 /**
- * allows to ensure that service is UP
+ * Expose specs in YAML format
  */
 app.get('/openapi.yaml', function (req, res) {
     return res.send(yaml.dump(specs));
 });
 
+/**
+ * Expose specs in JSON format
+ */
 app.get('/openapi.json', function (req, res) {
     return res.send(specs);
 });
@@ -55,6 +58,31 @@ import { getParcellaireExpress } from './gpf/parcellaire-express.js';
 import { getAssiettesServitudes, getUrbanisme } from './gpf/urbanisme.js';
 import { getAdminUnits } from './gpf/adminexpress.js';
 import { getAltitudeByLocation } from './gpf/altitude.js';
+import { geocode } from './gpf/geocode.js';
+
+
+app.get('/v1/geocode', [
+    query("text").notEmpty()
+], async function (req, res) {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        return res.status(400).send({
+            message: "invalid parameters",
+            errors: errors.array()
+        });
+    }
+
+    const params = matchedData(req);
+    try {
+        const result = await geocode(params.text);
+        return res.json(result);
+    }catch(e){
+        logger.error(e.message);
+        return res.status(500).json({
+            message: "An error occurred"
+        })
+    }
+});
 
 app.get('/v1/altitude', [
     query("lon").notEmpty().isNumeric(),
